--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,8 +3,12 @@
 export(Require)
 export(checkPath)
 export(normPath)
+export(tempdir2)
+export(tempfile2)
 exportMethods(checkPath)
 exportMethods(normPath)
+importFrom(data.table,":=")
+importFrom(data.table,.SD)
 importFrom(data.table,as.data.table)
 importFrom(data.table,data.table)
 importFrom(data.table,is.data.table)
@@ -18,5 +22,7 @@ importFrom(utils,assignInMyNamespace)
 importFrom(utils,available.packages)
 importFrom(utils,capture.output)
 importFrom(utils,compareVersion)
+importFrom(utils,download.file)
 importFrom(utils,install.packages)
 importFrom(utils,installed.packages)
+importFrom(utils,tail)
