--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,13 +2,14 @@
 
 export(Require2)
 export(checkPath)
+export(extractPkgName)
+export(getGitHubPackageVersion)
 export(messageDF)
 export(normPath)
 export(pkgDep)
 export(pkgDep2)
 export(tempdir2)
 export(tempfile2)
-export(unloadNSRecursive)
 exportMethods(checkPath)
 exportMethods(normPath)
 importFrom(crayon,black)
