--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -20,14 +20,9 @@ Authors@R: c(
 Depends:
     R (>= 3.5)
 Imports:
-    crayon,
     data.table (>= 1.10.4),
     remotes,
-    tools,
-    utils,
-    versions
-Suggests:
-    testthat
+    utils
 Encoding: UTF-8
 Language: en-CA
 License: GPL-3
