--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,6 +24,7 @@ importFrom(data.table,setDT)
 importFrom(data.table,setnames)
 importFrom(data.table,setorderv)
 importFrom(remotes,install_github)
+importFrom(remotes,install_version)
 importFrom(utils,assignInMyNamespace)
 importFrom(utils,available.packages)
 importFrom(utils,capture.output)
