More incl pkgSnapshot

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(messageDF)
 export(normPath)
 export(pkgDep)
 export(pkgDep2)
+export(pkgSnapshot)
 export(rndstr)
 export(tempdir2)
 export(tempfile2)
@@ -34,3 +35,4 @@ importFrom(utils,download.file)
 importFrom(utils,install.packages)
 importFrom(utils,installed.packages)
 importFrom(utils,tail)
+importFrom(utils,write.table)
