--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ export(tempfile2)
 exportMethods(checkPath)
 exportMethods(normPath)
 importFrom(data.table,":=")
+importFrom(data.table,.I)
 importFrom(data.table,.SD)
 importFrom(data.table,as.data.table)
 importFrom(data.table,data.table)
