--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(tempdir2)
 export(tempfile2)
 exportMethods(checkPath)
 exportMethods(normPath)
+import(methods)
 importFrom(data.table,":=")
 importFrom(data.table,.I)
 importFrom(data.table,.SD)
