--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,10 +2,13 @@
 
 export(Require)
 export(checkPath)
+export(extractInequality)
+export(extractPkgGitHub)
 export(extractPkgName)
-export(getGitHubPackageVersion)
+export(getGitHubDESCRIPTION)
 export(messageDF)
 export(normPath)
+export(parseGitHub)
 export(pkgDep)
 export(pkgDep2)
 export(pkgSnapshot)
