--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(parseGitHub)
 export(pkgDep)
 export(pkgDep2)
 export(pkgSnapshot)
+export(setLibPaths)
 export(tempdir2)
 export(tempfile2)
 exportMethods(checkPath)
