--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -1,2 +1,20 @@
 ^.*\.Rproj$
 ^\.Rproj\.user$
+.*\.toc$
+^\.lintr$
+^\.httr-oauth$
+^\.travis\.yml$
+^_pkgdown\.yml$
+^appveyor\.yml$
+^cheatsheets$
+^CONTRIBUTING\.md$
+^cran-comments\.md$
+^CRAN-RELEASE$
+^docs$
+^LICENSE$
+^revdep$
+^travis_wait_.*\.log$
+^stickers$
+tests/testthat/\.httr-oauth$
+vignettes/.*_cache$
+vignettes/.*\.log$
