--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,46 @@
-.Rproj.user
+.csv
+.httr-oauth
+.log
+.Rapp.history
+*.RData
 .Rhistory
-.RData
-.Ruserdata
+.Rproj.user
+inst/doc
+/revdep/.cache.rds
+vignettes/Intro-to-Cache\.html
+vignettes/Intro-to-Cache\.R
+
+#################
+## LaTeX
+*.acn
+*.acr
+*.alg
+*.aux
+*.bbl
+*.blg
+*.dvi
+*.fdb_latexmk
+*.glg
+*.glo
+*.gls
+*.idx
+*.ilg
+*.ind
+*.ist
+*.lof
+*.log
+*.lot
+*.maf
+*.mtc
+*.mtc0
+*.nav
+*.nlo
+*.out
+*.pdfsync
+*.ps
+*.snm
+*.synctex.gz
+*.toc
+*.vrb
+*.xdy
+*.tdo
