--- a/appveyor.yml
+++ b/appveyor.yml
@@ -69,8 +69,8 @@ notifications:
   - provider: Email
     to:
     - alex.chubaty@gmail.com
-    subject: 'reproducible: r-appveyor build {{status}}'
-    message: "https://ci.appveyor.com/project/achubaty/reproducible"
+    subject: 'Require: r-appveyor build {{status}}'
+    message: "https://ci.appveyor.com/project/achubaty/Require"
     on_build_success: false
     on_build_failure: false
     on_build_status_changed: true
