missing imports utils packageVersion

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(checkPath)
 export(extractInequality)
 export(extractPkgGitHub)
 export(extractPkgName)
+export(extractVersionNumber)
 export(getGitHubDESCRIPTION)
 export(messageDF)
 export(normPath)
@@ -15,6 +16,7 @@ export(pkgSnapshot)
 export(setLibPaths)
 export(tempdir2)
 export(tempfile2)
+export(trimVersionNumber)
 exportMethods(checkPath)
 exportMethods(normPath)
 import(methods)
@@ -39,5 +41,6 @@ importFrom(utils,compareVersion)
 importFrom(utils,download.file)
 importFrom(utils,install.packages)
 importFrom(utils,installed.packages)
+importFrom(utils,packageVersion)
 importFrom(utils,tail)
 importFrom(utils,write.table)
