--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(extractPkgGitHub)
 export(extractPkgName)
 export(extractVersionNumber)
 export(getGitHubDESCRIPTION)
+export(install_githubV)
 export(messageDF)
 export(normPath)
 export(parseGitHub)
