--- a/appveyor.yml
+++ b/appveyor.yml
@@ -31,12 +31,13 @@ environment:
   - R_VERSION: release
 
   - R_VERSION: oldrel
-    RTOOLS_VERSION: 36
+    RTOOLS_VERSION: 35
 
 clone_depth: 5
 
 build_script:
   - Rscript -e "install.packages(c('RCurl'), repos = 'https://cran.rstudio.com')"
+  - Rscript -e "install.packages(c('data.table', 'utf8'), repos = 'https://cran.rstudio.com', type = 'source')"
   - travis-tool.sh install_deps
 
 test_script:
@@ -68,7 +69,8 @@ artifacts:
 notifications:
   - provider: Email
     to:
-    - alex.chubaty@gmail.com
+      - alex.chubaty@gmail.com
+      - '{{commitAuthorEmail}}'
     subject: 'Require: r-appveyor build {{status}}'
     message: "https://ci.appveyor.com/project/achubaty/Require"
     on_build_success: false
