--- a/.travis.yml
+++ b/.travis.yml
@@ -22,9 +22,11 @@ matrix:
     r_packages:
       - covr
       - devtools
+      - spelling
     r_github_packages:
       - jimhester/lintr
     after_success:
+    - Rscript -e 'spelling::spell_check_package(error = FALSE)'
     - Rscript -e 'covr::coveralls(type = "all", quiet = FALSE)'
     - Rscript -e 'lintr::lint_package()'
   - os: linux
