pkgSnapshot -- default filename in args and non-hidden

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(getGitHubDESCRIPTION)
 export(getPkgVersions)
 export(installFrom)
 export(install_githubV)
+export(invertList)
 export(messageDF)
 export(normPath)
 export(parseGitHub)
