single quote software, function names

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: Require
 Type: Package
 Title: Installing and loading R packages for reproducible workflows
-Description: A single key function, `Require` that wraps `install.packages`,
-    `remotes::install_github`, `versions::install.versions`, and `base::require`
+Description: A single key function, 'Require' that wraps 'install.packages',
+    'remotes::install_github', 'versions::install.versions', and 'base::require'
     that allows for reproducible workflows. As with other functions in a
     reproducible workflow, this package emphasizes functions that return the 
     same result whether it is the first or subsequent times running the function.
