--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,7 @@ export(normPath)
 export(parseGitHub)
 export(pkgDep)
 export(pkgDep2)
+export(pkgDepTopoSort)
 export(pkgSnapshot)
 export(setLibPaths)
 export(tempdir2)
