secret coveralls token for github actions

--- a/.github/workflows/test-coverage.yaml
+++ b/.github/workflows/test-coverage.yaml
@@ -14,6 +14,7 @@ jobs:
   test-coverage:
     runs-on: macOS-latest
     env:
+      COVERALLS_TOKEN: ${{ secrets.COVERALLS_TOKEN }}
       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
     steps:
       - uses: actions/checkout@v2
