tweak coveralls workflow for github actions

--- a/.github/workflows/test-coverage.yaml
+++ b/.github/workflows/test-coverage.yaml
@@ -13,9 +13,12 @@ name: test-coverage
 jobs:
   test-coverage:
     runs-on: macOS-latest
+
     env:
+      CI_NAME: github-actions
       COVERALLS_TOKEN: ${{ secrets.COVERALLS_TOKEN }}
       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
+
     steps:
       - uses: actions/checkout@v2
 
