--- a/NAMESPACE
+++ b/NAMESPACE
@@ -33,6 +33,7 @@ importFrom(data.table,.I)
 importFrom(data.table,.SD)
 importFrom(data.table,as.data.table)
 importFrom(data.table,data.table)
+importFrom(data.table,fwrite)
 importFrom(data.table,is.data.table)
 importFrom(data.table,rbindlist)
 importFrom(data.table,set)
