--- a/NAMESPACE
+++ b/NAMESPACE
@@ -52,4 +52,5 @@ importFrom(utils,download.file)
 importFrom(utils,install.packages)
 importFrom(utils,packageVersion)
 importFrom(utils,tail)
+importFrom(utils,untar)
 importFrom(utils,write.table)
