--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,6 +20,7 @@ export(normPath)
 export(parseGitHub)
 export(pkgDep)
 export(pkgDep2)
+export(pkgDep3)
 export(pkgDepTopoSort)
 export(pkgSnapshot)
 export(setLibPaths)
