--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,8 +19,8 @@ export(invertList)
 export(normPath)
 export(parseGitHub)
 export(pkgDep)
-export(pkgDep1)
 export(pkgDep2)
+export(pkgDepAlt)
 export(pkgDepTopoSort)
 export(pkgSnapshot)
 export(setLibPaths)
