--- a/NAMESPACE
+++ b/NAMESPACE
@@ -52,6 +52,7 @@ importFrom(utils,compareVersion)
 importFrom(utils,download.file)
 importFrom(utils,install.packages)
 importFrom(utils,packageVersion)
+importFrom(utils,sessionInfo)
 importFrom(utils,tail)
 importFrom(utils,untar)
 importFrom(utils,write.table)
