--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(Require)
 export(RequireOptions)
 export(archiveVersionsAvailable)
 export(checkPath)
+export(detachAll)
 export(doInstalls)
 export(doLoading)
 export(extractInequality)
