--- a/NAMESPACE
+++ b/NAMESPACE
@@ -52,6 +52,7 @@ importFrom(utils,chooseCRANmirror)
 importFrom(utils,compareVersion)
 importFrom(utils,download.file)
 importFrom(utils,install.packages)
+importFrom(utils,modifyList)
 importFrom(utils,packageVersion)
 importFrom(utils,sessionInfo)
 importFrom(utils,tail)
