--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ export(getPkgVersions)
 export(installFrom)
 export(install_githubV)
 export(invertList)
+export(modifyList2)
 export(normPath)
 export(parseGitHub)
 export(pkgDep)
