pkgDepIfDepRemoved new fn for developers

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,6 +23,7 @@ export(parseGitHub)
 export(pkgDep)
 export(pkgDep2)
 export(pkgDepAlt)
+export(pkgDepIfDepRemoved)
 export(pkgDepTopoSort)
 export(pkgSnapshot)
 export(setLibPaths)
