new setup function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,6 +27,8 @@ export(pkgDepIfDepRemoved)
 export(pkgDepTopoSort)
 export(pkgSnapshot)
 export(setLibPaths)
+export(setup)
+export(setupOff)
 export(tempdir2)
 export(tempfile2)
 export(trimVersionNumber)
