--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,8 @@ export(getAvailable)
 export(getGitHubDESCRIPTION)
 export(getPkgVersions)
 export(installFrom)
+export(installGitHubPackage)
+export(installGithubPackage)
 export(install_githubV)
 export(invertList)
 export(modifyList2)
