--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -32,4 +32,5 @@ Language: en-CA
 License: GPL-3
 BugReports: https://github.com/PredictiveEcology/Require/issues
 ByteCompile: yes
+Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1
