--- a/NAMESPACE
+++ b/NAMESPACE
@@ -50,6 +50,7 @@ importFrom(data.table,setnames)
 importFrom(data.table,setorderv)
 importFrom(remotes,install_github)
 importFrom(remotes,install_version)
+importFrom(stats,setNames)
 importFrom(utils,available.packages)
 importFrom(utils,capture.output)
 importFrom(utils,chooseCRANmirror)
