--- a/NAMESPACE
+++ b/NAMESPACE
@@ -64,4 +64,5 @@ importFrom(utils,packageVersion)
 importFrom(utils,sessionInfo)
 importFrom(utils,tail)
 importFrom(utils,untar)
+importFrom(utils,unzip)
 importFrom(utils,write.table)
