--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(RequireOptions)
 export(RequirePkgCacheDir)
 export(archiveVersionsAvailable)
 export(checkPath)
+export(continueWithWarning)
 export(detachAll)
 export(doInstalls)
 export(doLoading)
@@ -19,7 +20,6 @@ export(getPkgVersions)
 export(installFrom)
 export(installGitHubPackage)
 export(installGithubPackage)
-export(install_githubV)
 export(invertList)
 export(modifyList2)
 export(normPath)
@@ -60,6 +60,7 @@ importFrom(utils,compareVersion)
 importFrom(utils,download.file)
 importFrom(utils,install.packages)
 importFrom(utils,modifyList)
+importFrom(utils,packageDescription)
 importFrom(utils,packageVersion)
 importFrom(utils,sessionInfo)
 importFrom(utils,tail)
