--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,8 +9,8 @@ Description: A single key function, 'Require' that wraps 'install.packages',
 URL: 
     https://Require.predictiveecology.org,
     https://github.com/PredictiveEcology/Require
-Date: 2022-06-25
-Version: 0.1.0.9003
+Date: 2022-08-31
+Version: 0.1.1
 Authors@R: c(
     person("Eliot J B", "McIntire", email = "eliot.mcintire@canada.ca",
     role = c("aut", "cre"), comment = c(ORCID = "0000-0002-6914-8316")),
@@ -24,8 +24,9 @@ Imports:
     methods,
     utils
 Suggests:
-    remotes,
     covr,
+    pak,
+    remotes,
     testit
 Encoding: UTF-8
 Language: en-CA
@@ -33,4 +34,4 @@ License: GPL-3
 BugReports: https://github.com/PredictiveEcology/Require/issues
 ByteCompile: yes
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.2.0
+RoxygenNote: 7.2.1
