--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,9 +17,9 @@ export(getAvailable)
 export(getGitHubDESCRIPTION)
 export(getPkgVersions)
 export(installFrom)
+export(installGitHub)
 export(installGitHubPackage)
 export(installGithubPackage)
-export(install_githubV)
 export(invertList)
 export(modifyList2)
 export(normPath)
