--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,16 +1,21 @@
 Package: Require
 Type: Package
 Title: Installing and Loading R Packages for Reproducible Workflows
-Description: A single key function, 'Require' that wraps 'install.packages',
-    'remotes::install_github', 'versions::install.versions', and 'base::require'
-    that allows for reproducible workflows. As with other functions in a
-    reproducible workflow, this package emphasizes functions that return the 
-    same result whether it is the first or subsequent times running the function.
+Description: A single key function, 'Require' that makes rerun-tolerant
+    versions of 'install.packages' and `require` for CRAN packages, packages
+    no longer on CRAN (i.e., archived), specific versions of packages, 
+    and github packages. This approach is developed to create reproducible 
+    workflows that are flexible enough to use while in development stages. 
+    As with other functions in a reproducible workflow, this package 
+    emphasizes functions that return the same result whether it is 
+    the first or subsequent times running the function, with subsequent times being
+    sufficiently fast that they can be run every time without undue waiting burden on 
+    the developer.
 URL: 
     https://Require.predictiveecology.org,
     https://github.com/PredictiveEcology/Require
-Date: 2022-08-31
-Version: 0.1.1
+Date: 2022-09-02
+Version: 0.1.1.9000
 Authors@R: c(
     person("Eliot J B", "McIntire", email = "eliot.mcintire@canada.ca",
     role = c("aut", "cre"), comment = c(ORCID = "0000-0002-6914-8316")),
