--- a/NAMESPACE
+++ b/NAMESPACE
@@ -30,6 +30,7 @@ export(pkgDepAlt)
 export(pkgDepIfDepRemoved)
 export(pkgDepTopoSort)
 export(pkgSnapshot)
+export(rCurrentVersion)
 export(setLibPaths)
 export(setup)
 export(setupOff)
