--- a/NAMESPACE
+++ b/NAMESPACE
@@ -53,6 +53,7 @@ importFrom(data.table,setDT)
 importFrom(data.table,setkeyv)
 importFrom(data.table,setnames)
 importFrom(data.table,setorderv)
+importFrom(stats,na.omit)
 importFrom(stats,setNames)
 importFrom(utils,available.packages)
 importFrom(utils,capture.output)
