--- a/NAMESPACE
+++ b/NAMESPACE
@@ -31,6 +31,7 @@ export(pkgDepTopoSort)
 export(pkgSnapshot)
 export(rCurrentVersion)
 export(setLibPaths)
+export(setLinuxBinaryRepo)
 export(setup)
 export(setupOff)
 export(tempdir2)
