--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ export(extractPkgName)
 export(extractVersionNumber)
 export(getAvailable)
 export(getGitHubDESCRIPTION)
+export(getOptionRPackageCache)
 export(getPkgVersions)
 export(installFrom)
 export(installGitHub)
