add getRequireOptions() and clarify docs

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ export(getAvailable)
 export(getGitHubDESCRIPTION)
 export(getOptionRPackageCache)
 export(getPkgVersions)
+export(getRequireOptions)
 export(installFrom)
 export(installGitHub)
 export(installGitHubPackage)
