helpers to setup pkg compilation cache / ccache

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -39,6 +39,7 @@ export(setupOff)
 export(tempdir2)
 export(tempfile2)
 export(trimVersionNumber)
+export(useLinuxSourceCache)
 exportMethods(checkPath)
 exportMethods(normPath)
 import(methods)
