installedVersion -- need hybrid between inst.pack & packageVersion

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -64,6 +64,7 @@ importFrom(utils,chooseCRANmirror)
 importFrom(utils,compareVersion)
 importFrom(utils,download.file)
 importFrom(utils,install.packages)
+importFrom(utils,installed.packages)
 importFrom(utils,modifyList)
 importFrom(utils,packageVersion)
 importFrom(utils,sessionInfo)
