cran comments and README

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,12 +5,13 @@ Description: A single key function, 'Require' that makes rerun-tolerant
     versions of 'install.packages' and `require` for CRAN packages, packages
     no longer on CRAN (i.e., archived), specific versions of packages, 
     and GitHub packages. This approach is developed to create reproducible 
-    workflows that are flexible enough to use while in development stages. 
+    workflows that are flexible and fast enough to use while in development stages,
+    while able to build snapshots once a stable package collection is found. 
     As with other functions in a reproducible workflow, this package 
     emphasizes functions that return the same result whether it is 
     the first or subsequent times running the function, with subsequent times being
     sufficiently fast that they can be run every time without undue waiting burden on 
-    the developer.
+    the user or developer.
 URL: 
     https://Require.predictiveecology.org,
     https://github.com/PredictiveEcology/Require
