update GHA for website

--- a/.github/workflows/deploy-pkg-website.yaml
+++ b/.github/workflows/deploy-pkg-website.yaml
@@ -27,6 +27,7 @@ jobs:
           extra-packages: |
             any::pkgdown
             any::XML
+        needs: website
 
       - name: Deploy package
         run: |
