--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,6 +25,7 @@ export(installGithubPackage)
 export(invertList)
 export(modifyList2)
 export(normPath)
+export(paddedFloatToChar)
 export(parseGitHub)
 export(pkgDep)
 export(pkgDep2)
