export sourcePkgs for user

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -37,6 +37,7 @@ export(setLibPaths)
 export(setLinuxBinaryRepo)
 export(setup)
 export(setupOff)
+export(sourcePkgs)
 export(tempdir2)
 export(tempfile2)
 export(trimVersionNumber)
