pkgSnapshot2 to create the vector of packages and versions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -32,6 +32,7 @@ export(pkgDep2)
 export(pkgDepIfDepRemoved)
 export(pkgDepTopoSort)
 export(pkgSnapshot)
+export(pkgSnapshot2)
 export(rCurrentVersion)
 export(setLibPaths)
 export(setLinuxBinaryRepo)
