setdiffNamed (new fn); modifyList2 can accept any named objects

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -36,6 +36,7 @@ export(pkgSnapshot2)
 export(rCurrentVersion)
 export(setLibPaths)
 export(setLinuxBinaryRepo)
+export(setdiffNamed)
 export(setup)
 export(setupOff)
 export(sourcePkgs)
