--- a/NAMESPACE
+++ b/NAMESPACE
@@ -71,6 +71,7 @@ importFrom(utils,install.packages)
 importFrom(utils,installed.packages)
 importFrom(utils,modifyList)
 importFrom(utils,packageVersion)
+importFrom(utils,remove.packages)
 importFrom(utils,sessionInfo)
 importFrom(utils,tail)
 importFrom(utils,untar)
