invert if/else logic of modifyList2 + export modifyList3

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,6 +24,7 @@ export(installGitHubPackage)
 export(installGithubPackage)
 export(invertList)
 export(modifyList2)
+export(modifyList3)
 export(normPath)
 export(paddedFloatToChar)
 export(parseGitHub)
