R CMD check; redoc;

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -67,6 +67,7 @@ importFrom(utils,available.packages)
 importFrom(utils,capture.output)
 importFrom(utils,chooseCRANmirror)
 importFrom(utils,compareVersion)
+importFrom(utils,contrib.url)
 importFrom(utils,download.file)
 importFrom(utils,install.packages)
 importFrom(utils,installed.packages)
