get imports correct

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -51,17 +51,20 @@ importFrom(data.table,set)
 importFrom(data.table,setDT)
 importFrom(data.table,setnames)
 importFrom(data.table,setorderv)
-importFrom(stats,setNames)
+importFrom(stats,na.omit)
 importFrom(utils,available.packages)
 importFrom(utils,capture.output)
 importFrom(utils,chooseCRANmirror)
 importFrom(utils,compareVersion)
 importFrom(utils,contrib.url)
+importFrom(utils,download.file)
 importFrom(utils,install.packages)
 importFrom(utils,installed.packages)
 importFrom(utils,modifyList)
 importFrom(utils,packageVersion)
 importFrom(utils,remove.packages)
+importFrom(utils,sessionInfo)
+importFrom(utils,tail)
 importFrom(utils,untar)
 importFrom(utils,unzip)
 importFrom(utils,write.table)
