revert delete getPkgVersions -- used in SpaDES.core

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ export(extractPkgName)
 export(extractVersionNumber)
 export(getGitHubDESCRIPTION)
 export(getOptionRPackageCache)
+export(getPkgVersions)
 export(getRequireOptions)
 export(invertList)
 export(modifyList2)
