--- a/.github/workflows/test-coverage.yaml
+++ b/.github/workflows/test-coverage.yaml
@@ -1,10 +1,12 @@
 on:
   push:
     branches:
+      - main
       - master
       - development
   pull_request:
     branches:
+      - main
       - master
       - development
 
