--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,15 @@
 .Rhistory
 .Rprofile
 .Rproj.user
-
 inst/doc
 /revdep/.cache.rds
-
 .cacheAvailablePackages.rda
 packageVersions*.txt
-
 tests/testit/tmp.txt
-
 tmp*
-
 .secret/
-
 .secrets/
-
 .RData
-
 .checks.RDS
+packages/*
+.secret
