--- a/NAMESPACE
+++ b/NAMESPACE
@@ -49,6 +49,7 @@ importFrom(data.table,data.table)
 importFrom(data.table,fwrite)
 importFrom(data.table,is.data.table)
 importFrom(data.table,rbindlist)
+importFrom(data.table,rleid)
 importFrom(data.table,set)
 importFrom(data.table,setDT)
 importFrom(data.table,setnames)
