--- a/NAMESPACE
+++ b/NAMESPACE
@@ -55,6 +55,7 @@ importFrom(data.table,setDT)
 importFrom(data.table,setnames)
 importFrom(data.table,setorderv)
 importFrom(stats,na.omit)
+importFrom(tools,R_user_dir)
 importFrom(utils,available.packages)
 importFrom(utils,capture.output)
 importFrom(utils,chooseCRANmirror)
