Revert "rm defunct fns (rCurrentVersion, useLinuxSourceCache, getPkgVersions)"
This reverts commit 7543e982338283b29837fd67c970ee83c6afcd13.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(extractPkgName)
 export(extractVersionNumber)
 export(getGitHubDESCRIPTION)
 export(getOptionRPackageCache)
+export(getPkgVersions)
 export(getRequireOptions)
 export(invertList)
 export(modifyList2)
@@ -27,6 +28,7 @@ export(pkgDepIfDepRemoved)
 export(pkgDepTopoSort)
 export(pkgSnapshot)
 export(pkgSnapshot2)
+export(rCurrentVersion)
 export(setLibPaths)
 export(setLinuxBinaryRepo)
 export(setdiffNamed)
@@ -36,6 +38,7 @@ export(sourcePkgs)
 export(tempdir2)
 export(tempfile2)
 export(trimVersionNumber)
+export(useLinuxSourceCache)
 exportMethods(checkPath)
 exportMethods(normPath)
 import(methods)
