--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(RequireOptions)
 export(RequirePkgCacheDir)
 export(archiveVersionsAvailable)
 export(checkPath)
+export(clearRequirePackageCache)
 export(detachAll)
 export(extractInequality)
 export(extractPkgGitHub)
