getCRANrepos -- Export it because need it in examples (even 'dontrun')

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(extractInequality)
 export(extractPkgGitHub)
 export(extractPkgName)
 export(extractVersionNumber)
+export(getCRANrepos)
 export(getGitHubDESCRIPTION)
 export(getOptionRPackageCache)
 export(getPkgVersions)
