--- a/NAMESPACE
+++ b/NAMESPACE
@@ -65,6 +65,7 @@ importFrom(utils,download.file)
 importFrom(utils,install.packages)
 importFrom(utils,installed.packages)
 importFrom(utils,modifyList)
+importFrom(utils,packageDescription)
 importFrom(utils,packageVersion)
 importFrom(utils,remove.packages)
 importFrom(utils,sessionInfo)
