--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -54,7 +54,9 @@ jobs:
             any::rcmdcheck
 
       - uses: r-lib/actions/check-r-package@v2
-        
+        with:
+          args: 'c("--as-cran")'
+
       - name: Show testthat output
         if: always()
         run: find check -name 'testthat.Rout*' -exec cat '{}' \; || true
