--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,8 @@ export(getGitHubDESCRIPTION)
 export(getOptionRPackageCache)
 export(getRequireOptions)
 export(invertList)
+export(messageDF)
+export(messageVerbose)
 export(modifyList2)
 export(modifyList3)
 export(normPath)
