--- a/NAMESPACE
+++ b/NAMESPACE
@@ -28,6 +28,7 @@ export(paddedFloatToChar)
 export(parseGitHub)
 export(pkgDep)
 export(pkgDep2)
+export(pkgDep4)
 export(pkgDepIfDepRemoved)
 export(pkgDepTopoSort)
 export(pkgSnapshot)
