--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,8 +15,8 @@ Description: A single key function, 'Require' that makes rerun-tolerant
 URL: 
     https://Require.predictiveecology.org,
     https://github.com/PredictiveEcology/Require
-Date: 2023-10-19
-Version: 0.3.1.9015
+Date: 2024-02-13
+Version: 0.3.1.9016
 Authors@R: c(
     person(given = "Eliot J B",
            family = "McIntire",
@@ -51,3 +51,18 @@ BugReports: https://github.com/PredictiveEcology/Require/issues
 ByteCompile: yes
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
+Collate: 
+    'CRAN.R'
+    'Require-helpers.R'
+    'Require-package.R'
+    'Require2.R'
+    'RequireOptions.R'
+    'envs.R'
+    'extract.R'
+    'helpers.R'
+    'pkgDep.R'
+    'pkgDep3.R'
+    'pkgSnapshot.R'
+    'setLibPaths.R'
+    'setup.R'
+    'zzz.R'
