--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,6 +27,7 @@ export(normPath)
 export(paddedFloatToChar)
 export(parseGitHub)
 export(pkgDep)
+export(pkgDep2)
 export(pkgDep4)
 export(pkgDepIfDepRemoved)
 export(pkgDepTopoSort)
