--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,16 +6,16 @@ export(Require)
 export(RequireCacheDir)
 export(RequireOptions)
 export(RequirePkgCacheDir)
-export(archiveVersionsAvailable)
 export(checkPath)
 export(clearRequirePackageCache)
 export(detachAll)
+export(dlArchiveVersionsAvailable)
+export(dlGitHubDESCRIPTION)
 export(extractInequality)
 export(extractPkgGitHub)
 export(extractPkgName)
 export(extractVersionNumber)
 export(getCRANrepos)
-export(getGitHubDESCRIPTION)
 export(getOptionRPackageCache)
 export(getRequireOptions)
 export(invertList)
