--- a/NAMESPACE
+++ b/NAMESPACE
@@ -64,6 +64,7 @@ importFrom(utils,capture.output)
 importFrom(utils,chooseCRANmirror)
 importFrom(utils,compareVersion)
 importFrom(utils,contrib.url)
+importFrom(utils,download.file)
 importFrom(utils,install.packages)
 importFrom(utils,installed.packages)
 importFrom(utils,modifyList)
@@ -72,5 +73,6 @@ importFrom(utils,packageVersion)
 importFrom(utils,remove.packages)
 importFrom(utils,sessionInfo)
 importFrom(utils,tail)
+importFrom(utils,untar)
 importFrom(utils,unzip)
 importFrom(utils,write.table)
