--- a/NAMESPACE
+++ b/NAMESPACE
@@ -59,6 +59,7 @@ importFrom(data.table,setnames)
 importFrom(data.table,setorderv)
 importFrom(stats,na.omit)
 importFrom(tools,R_user_dir)
+importFrom(utils,assignInMyNamespace)
 importFrom(utils,available.packages)
 importFrom(utils,capture.output)
 importFrom(utils,chooseCRANmirror)
