--- a/NAMESPACE
+++ b/NAMESPACE
@@ -41,6 +41,7 @@ export(sourcePkgs)
 export(tempdir2)
 export(tempfile2)
 export(trimVersionNumber)
+export(updatePackages)
 exportMethods(checkPath)
 exportMethods(normPath)
 import(methods)
