--- a/NAMESPACE
+++ b/NAMESPACE
@@ -32,6 +32,7 @@ export(pkgDepIfDepRemoved)
 export(pkgDepTopoSort)
 export(pkgSnapshot)
 export(pkgSnapshot2)
+export(purgeCache)
 export(setLibPaths)
 export(setLinuxBinaryRepo)
 export(setdiffNamed)
