--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -26,12 +26,16 @@ jobs:
           - {os: macOS-latest,   r: 'release'}
           - {os: windows-latest, r: 'devel'}
           - {os: windows-latest, r: 'release'}
-          - {os: windows-latest, r: '4.1'}
-          - {os: windows-latest, r: '4.0'}
+          - {os: windows-latest, r: 'oldrel/1'}
+          - {os: windows-latest, r: 'oldrel/2'}
+          - {os: windows-latest, r: 'oldrel/3'}
+          - {os: windows-latest, r: 'oldrel/4'}
           - {os: ubuntu-20.04,   r: 'devel'}
           - {os: ubuntu-20.04,   r: 'release'}
-          - {os: ubuntu-20.04,   r: 'oldrel'}
-          - {os: ubuntu-20.04,   r: '4.0'}
+          - {os: ubuntu-20.04,   r: 'oldrel/1'}
+          - {os: ubuntu-20.04,   r: 'oldrel/2'}
+          - {os: ubuntu-20.04,   r: 'oldrel/3'}
+          - {os: ubuntu-20.04,   r: 'oldrel/4'}
 
     env:
       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
