--- a/NAMESPACE
+++ b/NAMESPACE
@@ -60,6 +60,8 @@ importFrom(data.table,setDT)
 importFrom(data.table,setnames)
 importFrom(data.table,setorderv)
 importFrom(stats,na.omit)
+importFrom(sys,exec_background)
+importFrom(sys,exec_wait)
 importFrom(tools,R_user_dir)
 importFrom(utils,assignInMyNamespace)
 importFrom(utils,available.packages)
