--- a/NAMESPACE
+++ b/NAMESPACE
@@ -70,6 +70,7 @@ importFrom(utils,chooseCRANmirror)
 importFrom(utils,compareVersion)
 importFrom(utils,contrib.url)
 importFrom(utils,download.file)
+importFrom(utils,head)
 importFrom(utils,install.packages)
 importFrom(utils,installed.packages)
 importFrom(utils,modifyList)
