--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -41,16 +41,24 @@ Imports:
     tools,
     utils
 Suggests:
+    cli,
     covr,
+    crayon,
     curl,
     diffobj,
+    fpCompare,
     gitcreds,
     googledrive,
     httr,
+    lobstr,
+    magrittr,
     pak,
     parallel,
-    rematch2, 
+    R6,
+    rematch2,
+    rlang,
     rprojroot,
+    stringr,
     testthat (>= 3.0.0),
     waldo,
     withr
