rm stale commented code; .txtNoneAvailable; BUMP

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -76,6 +76,7 @@ importFrom(utils,installed.packages)
 importFrom(utils,modifyList)
 importFrom(utils,packageDescription)
 importFrom(utils,packageVersion)
+importFrom(utils,read.csv)
 importFrom(utils,remove.packages)
 importFrom(utils,sessionInfo)
 importFrom(utils,tail)
