--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -33,7 +33,8 @@ Authors@R: c(
            role = "cph")
     )
 Depends:
-    R (>= 4.0)
+    R (>= 4.0),
+    pak
 Imports:
     data.table (>= 1.10.4),
     methods,
@@ -47,7 +48,6 @@ Suggests:
     gitcreds,
     googledrive,
     httr,
-    pak,
     parallel,
     rematch2, 
     rprojroot,
