--- a/NAMESPACE
+++ b/NAMESPACE
@@ -59,6 +59,10 @@ importFrom(data.table,set)
 importFrom(data.table,setDT)
 importFrom(data.table,setnames)
 importFrom(data.table,setorderv)
+importFrom(pak,cache_delete)
+importFrom(pak,pak)
+importFrom(pak,pkg_deps)
+importFrom(pak,pkg_history)
 importFrom(stats,na.omit)
 importFrom(sys,exec_background)
 importFrom(sys,exec_wait)
