--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(RequireOptions)
 export(RequirePkgCacheDir)
 export(checkPath)
 export(clearRequirePackageCache)
+export(defaultCacheDir)
 export(detachAll)
 export(dlArchiveVersionsAvailable)
 export(dlGitHubDESCRIPTION)
