--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,7 +16,7 @@ URL:
     https://Require.predictiveecology.org,
     https://github.com/PredictiveEcology/Require
 Date: 2024-07-23
-Version: 0.3.1.9109
+Version: 0.3.1.9110
 Authors@R: c(
     person(given = "Eliot J B",
            family = "McIntire",
@@ -52,6 +52,7 @@ Suggests:
     roxygen2,
     rprojroot,
     testthat (>= 3.0.0),
+    tibble,
     waldo,
     withr
 Encoding: UTF-8
