rename `cache` functions; news and vignette, v1.0.0

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,12 +3,15 @@
 export(.downloadFileMasterMainAuth)
 export(Install)
 export(Require)
-export(RequireCacheDir)
 export(RequireOptions)
-export(RequirePkgCacheDir)
+export(cacheClearPackages)
+export(cacheDefaultDir)
+export(cacheDir)
+export(cacheGetOptionCachePkgDir)
+export(cachePkgDir)
+export(cachePurge)
 export(checkPath)
 export(clearRequirePackageCache)
-export(defaultCacheDir)
 export(detachAll)
 export(dlArchiveVersionsAvailable)
 export(dlGitHubDESCRIPTION)
@@ -17,7 +20,6 @@ export(extractPkgGitHub)
 export(extractPkgName)
 export(extractVersionNumber)
 export(getCRANrepos)
-export(getOptionRPackageCache)
 export(getRequireOptions)
 export(invertList)
 export(messageDF)
