use inst/docs for RequireApproach.Rmd

--- a/.gitignore
+++ b/.gitignore
@@ -2,22 +2,4 @@
 .Rprofile
 .Rproj.user
 /revdep/.cache.rds
-.cacheAvailablePackages.rda
-packageVersions*.txt
-tests/testit/tmp.txt
-tmp*
-.secret/
-.secrets/
-.RData
-.checks.RDS
-packages/*
-packages1/*
-packages2/*
-packages3/*
-packages4/*
-packages5/*
-packages6/*
-.secret
-R/SpaDES/*
-modules/*
-docs
+/docs/
