knitr and rmarkdown

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -48,7 +48,9 @@ Suggests:
     httr,
     pak,
     parallel,
-    rematch2, 
+    rematch2,
+    rmarkdown,
+    knitr,
     roxygen2,
     rprojroot,
     testthat (>= 3.0.0),
