Issue #105: export from Require fns used by SpaDES.core

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(cachePkgDir)
 export(cachePurge)
 export(checkPath)
 export(clearRequirePackageCache)
+export(compareVersion2)
 export(detachAll)
 export(dlArchiveVersionsAvailable)
 export(dlGitHubDESCRIPTION)
