--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -28,10 +28,14 @@ jobs:
           - {os: windows-latest, r: 'release'}
           - {os: windows-latest, r: 'oldrel/1'}
           - {os: windows-latest, r: 'oldrel/2'}
-          - {os: ubuntu-20.04,   r: 'devel'}
-          - {os: ubuntu-20.04,   r: 'release'}
-          - {os: ubuntu-20.04,   r: 'oldrel/1'}
-          - {os: ubuntu-20.04,   r: 'oldrel/2'}
+          - {os: windows-latest, r: 'oldrel/3'}
+          - {os: windows-latest, r: 'oldrel/4'}
+          - {os: ubuntu-latest,   r: 'devel'}
+          - {os: ubuntu-latest,   r: 'release'}
+          - {os: ubuntu-latest,   r: 'oldrel/1'}
+          - {os: ubuntu-latest,   r: 'oldrel/2'}
+          - {os: ubuntu-latest,   r: 'oldrel/3'}
+          - {os: ubuntu-latest,   r: 'oldrel/4'}
 
     env:
       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
@@ -49,7 +53,7 @@ jobs:
           use-public-rspm: true
 
       - name: Set additional env vars for checks when on Ubuntu
-        if: ${{ matrix.config.os == 'ubuntu-20.04' }}
+        if: ${{ matrix.config.os == 'ubuntu-latest' }}
         run: |
           echo "_R_CHECK_THINGS_IN_OTHER_DIRS_=true" >> $GITHUB_ENV
 
